# vault-authority

./: BUILD_LOCK.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.prod  README.md  cloudbuild.yaml  deploy.sh  package.json  playbook.yaml  prb-check.sh  setup.sh
docs/: CISO_RISK_MEMO.md  INVARIANTS.md  MONITORING-SETUP.md  OPERATIONS.md  PRB_v1.1_SPEC.md  RECEIPTS.md  REDTEAM.md  SECURITY.md  TAXONOMY.md
grafana/: dashboard.json
k8s/: deployment-csi.yaml  deployment.yaml  secret-provider.yaml  secrets.yaml
migrations/: 0002_add_audit_indices.sql
playbooks/: cleanup_old_logs.sh  db_session_kill.sh  disk_purge.sh  log_exporter.sh  net_reset.sh  rate_adjust.sh  remediation_audit.sh  rotate_signing_key.sh  test_harness.sh  token_refresh.sh  verify_constrainer_health.sh  verify_secrets.sh  worker_recycle.sh  zombie_reap.sh
scripts/: constrainer.py  constraints.yaml  prom-webhook.sh
src/: App.tsx  actions.rs  api.rs  lib.rs  main.rs  metrics.rs  remediation.rs  vaultd.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: EventFeed.tsx
src/styles/: main.css
terraform/: iam.tf  main.tf  variables.tf
tests/: integration_test.rs  redteam.rs
