[package]
name = "vault-authority"
version = "1.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1.37", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
thiserror = "1.0"
ed25519-dalek = "2.1"
rand = "0.8"
uuid = { version = "1.8", features = ["v4", "serde"] }
once_cell = "1.19"
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-rustls", "postgres"] }
base64 = "0.22"
