[package]
name = "vault-authority"
version = "1.1.0"
edition = "2021"
description = "Deterministic remediation gate with HTTP API and observability"

[dependencies]
# Core Logic & Asynchronous Runtime
tokio = { version = "1.37", features = ["full"] }
async-trait = "0.1"
once_cell = "1.19"
thiserror = "1.0"

# Networking & API Layer (v1.1)
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Cryptography & Integrity
ed25519-dalek = "2.1"
rand = "0.8"
uuid = { version = "1.8", features = ["v4", "serde"] }
hex = "0.4"
base64 = "0.22"

# Observability & Metrics (v1.1)
tracing = "0.1"
tracing-subscriber = "0.3"
prometheus = { version = "0.13", features = ["process"] }

# Database Persistence
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-rustls", "postgres"] }

[dev-dependencies]
# Testing harness for Red-Team verification
reqwest = { version = "0.12", features = ["json"] }
