[package]
name = "vault-authority"
version = "1.1.0"
edition = "2021"
authors = ["Joshua Vetos"]
description = "Autonomous infrastructure remediation with cryptographic integrity"

[dependencies]
# Core Async Runtime
tokio = { version = "1.35", features = ["full"] }

# Security & Cryptography
ed25519-dalek = "2.1"
rand = "0.8"

# Serialization & Configuration
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"

# Database Integration
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "json", "uuid"] }
uuid = { version = "1.6", features = ["v4", "serde"] }

# Observability
prometheus = "0.13"
lazy_static = "1.4"

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

[dev-dependencies]
# Testing & Red-Teaming
tempfile = "3.8"
mockall = "0.12"
